Fixed styling of collapse-section

--- a/collapse-section/collapse-section.less
+++ b/collapse-section/collapse-section.less
@@ -1,6 +1,18 @@
 ﻿collapse-section {
 	display: block;
 
+	.collapse-section-header {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+
+	.collapse-section-title {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+	}
+
 	paper-icon-button {
 		transition: transform 0.25s ease-out;
 
